tests/fixtures/invalid/pointer_array_negative_index.c
int main() {
    int values[2];
    int *p = values;
    return p[-1];
}
